# Chip8

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
Assets/: vertexShader.glsl
Chip8_Emulation/: Chip8.cpp  Chip8.h  Chip8_Debugger.cpp  Chip8_Debugger.h  Chip8_Emulation.cpp  Chip8_Emulation.sln  Chip8_Emulation.vcxproj  Chip8_Emulation.vcxproj.filters  Disassembler.cpp  Disassembler.h  Display.cpp  Display.h  Init_RomSettings.cpp  Init_RomSettings.h  Input.cpp  Input.h  Shader.cpp  Shader.h  SoundManager.cpp  SoundManager.h  TimeManager.cpp  TimeManager.h  fragmentShader.glsl  glad.c  imgui.ini  main.cpp
Chip8_Emulation/Chip8_Emulation/x64/Debug/: display.obj.enc
Chip8_Emulation/ImGui/: imgui.cpp
Chip8_Emulation/x64/Debug/: imgui.ini
Disassembly/: 2-ibm-logo.asm
Librairies/Include/glad/: glad.h
Librairies/lib/: MiniAudio.lib  glfw3.lib
Roms/: imgui.ini
